--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
       <version>0.0.1</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+        <groupId>net.luckperms</groupId>
+        <artifactId>api</artifactId>
+        <version>5.4</version>
+        <scope>provided</scope>
+    </dependency>
   </dependencies>
   
 </project>
